force-app/main/default/objects/Customer_Information__c/Customer_Information__c.object-meta.xml
<CustomObject>
    <label>Customer Information</label>
    <nameField>
        <label>Customer Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>