force-app/main/default/objects/Customer_Information__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Customer&apos;s street address.</description>
    <inlineHelpText>Customer&apos;s street address.</inlineHelpText>
    <label>Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>