force-app/main/default/objects/Customer_Information__c/fields/Contact_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Contact_Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customers Information</relationshipLabel>
    <relationshipName>Customers_Information</relationshipName>
    <type>Lookup</type>
</CustomField>