force-app/main/default/objects/Customer_Information__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Customer&apos;s first name</description>
    <inlineHelpText>Customer&apos;s first name</inlineHelpText>
    <label>First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>