force-app/main/default/objects/Customer_Information__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Customer&apos;s last name.</description>
    <inlineHelpText>Customer&apos;s last name.</inlineHelpText>
    <label>Last Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>