force-app/main/default/objects/Customer_Information__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Customer&apos;s phone number.</description>
    <inlineHelpText>Customer&apos;s phone number.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>