force-app/main/default/objects/Customer_Information__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Customer&apos;s state.</description>
    <inlineHelpText>Customer&apos;s state.</inlineHelpText>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>